--- a/CityInfo.API/appSettings.json
+++ b/CityInfo.API/appSettings.json
@@ -1,6 +1,9 @@
 ﻿{
   "mailSettings": {
     "mailToAddress": "developer@mycompany.com",
-    "mailFromAddress": "noreply@mycompany.com" 
+    "mailFromAddress": "noreply@mycompany.com"
+  },
+  "connectionString": {
+    "cityInfoDBConnectionString": "Server=(localdb)\\mssqllocaldb;Database=CityInfoDB;Trusted_Connection=True;"
   } 
 }
